<package format="2">
  <name>gesture_classifier</name>
  <version>0.0.0</version>
  <description>Package to classify hand gestures using MediaPipe.</description>
  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>TODO: License declaration</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_python</build_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
